test/error/E13.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": {
		"if": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	}
}
